tests/paczka1/fuzzy1/38588762.err
Error in line 3: aDX9kvk A548 81,3
Error in line 8: zrLJWU8 S498 92,3
Error in line 25: ZoXq A548 97,2
